--- a/_posts/thesis_chapters/2024-1-5-Gdps2.md
+++ b/_posts/thesis_chapters/2024-1-5-Gdps2.md
@@ -92,7 +92,6 @@ Then add personal back in - but keep it very brief - and signpoint to future stu
 
 In each section if there are multiple aspects of that use then highlight that in start of end of the section - and put this into the coding structure.
 
-Merge sections on technical processes - link by the participants - ie - Molly and Nadone first
 
 Examine overlap of the cultural uses of GDP, and the next chapter - hand in hand here get an overview of what needs to extracted from the data and where it sits
 
@@ -396,10 +395,6 @@ Toby to find patterns and to duplicate them in different situations.
  2019-05-08-te - With prompting from parent the child is able to recognise, duplicate and alter the update code for accepting left and right key input to change character x-axis velocity. After update and test iterations they change this to up and down key input to update y-axis velocity. The 3M approach lends itself well to exploring pattern recognition as patterns are readily available to participants in starting code and the extra patches that are added. -->
 <!--
  Also the knowledge of the GDP helps ability to recognise patterns in the code. Left / right -> Up / Down -->
-
-
-NOTE - THIS SECTION WILL NEED A LOT OF TRIMMING AND REFOCUSING BASED ON THE ADDITIONS TO THE PREVIOUS METHODS CHAPTER
-
 
 The process of reusing and modify code to create a computer game can surface both abstract and concrete computing concepts present in the concrete application of code that have emerged organically at different stages of the creative process. Especially Resnick's more concrete definitions.
 
@@ -1144,15 +1139,15 @@ For example, the work of the child to add 21 levels to their own game served as 
     Pause
     Toby: I’m just going to have one go of beating this (refering to his own game which he is playtesing). It’s 21 levels in it. So .. Yeeeeah.
     Pause
-    Bertie: It’s like parcours in Minecraft but times. It’s like playing the game Wipeout. Have you ever played Wipeout?
+    Bertie: It’s like parkours in Minecraft but times. It’s like playing the game Wipeout. Have you ever played Wipeout?
     Toby: Er not really.
     Bertie: Or seen it?
     Bertie: That’s like my second level.
     Toby: Ah so hard (Tobyfails at a high level on his game and starts to move off)
-    Toby: (To someone else  calling for attention)  No I’m helping (Ch)..
-    _(Tobythen follows Bertie to his workstation to help him implement more levels.)_
+    Toby: (To someone else  calling for attention)  No I’m helping Bertie.
+    _(Toby then follows Bertie to his workstation to help him implement more levels.)_
 
-When Tobymoves to Ch's game he playtests it and then looks at the code. He notes that Bertie has added a variable for a fourth level but then goes on to demonstrate to to add an array representing the next level, and a conditional statement to select level 4 when level 3 is completed. At Toby uses the keyboard completes this work, Bertie reads aloud the code which is being typed in by Te.
+When Toby moves to Bertie's game he playtests it and then looks at the code. He notes that Bertie has added a variable for a fourth level but then goes on to demonstrate to to add an array representing the next level, and a conditional statement to select level 4 when level 3 is completed. At Toby uses the keyboard completes this work, Bertie reads aloud the code which is being typed in by Te.
 
 Exchanges like this allow the propagation of GDPs. The process of playing a game of another and sharing your appreciation of it invites participants to add new patterns to their own game. In this example, the process is very direct with the one asking another to help them directly. It is very likely that Bertie has noticed Toby helping others add levels to their games and thus this may help him to feel empowered to do the same. The propagation here is emerges from and is completed entirely through peer activity. A different and more common pattern of propagation was that participants notice and comment on a game element or pattern during during playtesting, and then to use supporting resources or facilitator help to implement it. A less frequent pattern involved participants' diligent and deliberate use of supporting resources to identify and implement features without peer influence. Typical examples of propagating patterns include placing hazards in tricky places like a lava pit, the use of moving enemies and changes to jump dynamics.
 
@@ -1178,13 +1173,15 @@ While Ed has only just been introduced to the ability to "cramp". He is happy an
 
 **GDPs allow participants to share and explore their home and professional funds of knowledge and practices in the emerging learning community.**
 
-In the previous chapter, the ability for participants to bring home funds of knowledge into the emerging learning community was explored via the use of graphical assets and game narratives. In the previous example we can see a similar process occur as Toby self test his game exposes the dominant game experience of timed jumping.
+In the last chapter outlined ways in which participants could to bring their own interests into the game making process via the use of graphical assets (and game narratives).
 
-    Bertie: It’s like parkour in Minecraft but timed. It’s like playing the game Wipeout. Have you ever played Wipeout?
-    Toby: Er not really.
-    Bertie: Or seen it?
+In some of the examples above we saw Molly and Nadine do this.
 
-Parkour in Minecraft and Wipe out are both game experiences whose main gameplay mechanic is about judging jumps to landing accurately. Bertie makes links to his existing experience of games making comparisons between Toby's game, commercial games and his own. In doing so Bertie is able to show his knowledge and analysis of gameplay patterns to this community. While his motivation is not clear, one interpretation is that Bertie could be making this contribution not only to openly share experience but also as a offering in return for his request for help which he has just made.
+They bring some of their home funds of knowledge into the emerging learning community.
+
+NOTE ALSO NARRATIVE OF
+
+In the above example, Bertie comments on Toby's game which has a dominant game experience of timed jumping, noting "Bertie: "It’s like parkour in Minecraft but timed. It’s like playing the game Wipeout. Have you ever played Wipeout?". Parkour in Minecraft and Wipe out are both game experiences whose main gameplay mechanic is about judging jumps to landing accurately. Bertie makes links to his existing experience of games making comparisons between Toby's game, commercial games and his own. In doing so Bertie is able to show his knowledge and analysis of gameplay patterns to this community. While his motivation is not clear, one interpretation is that Bertie could be making this contribution not only to openly share experience but also as a offering in return for his request for help which he has just made.
 
 GET SOME OTHER  EXAMPLES HERE IF POSSIBLE - LINK TO STATS - AND NEXT CHAPTER.
 
