--- a/_posts/thesis_chapters/2024-1-5-Gdps2.md
+++ b/_posts/thesis_chapters/2024-1-5-Gdps2.md
@@ -101,6 +101,11 @@ Also work out what to move to Lit Review - and restructure LT and Methodology ba
 There is a table of simple results here.
 https://docs.google.com/document/d/12EmPhm8E_TE4rimvRdRf2wC5XRwT3EXO4cRZ99RNkTQ/edit
 
+
+
+
+
+
 ### Chapter outline
 
 In the last chapter I outlined use of tools often focusing on and emerging tensions in activity on a micro level. This chapter analyses this emergent activity at a mid-level scope between concrete tool use and the wider cultural context of the game making community. I focus on the implementation of individual game design patterns (GDPs) and in doing so addresses how data gathered informs thinking on the research question - _how can game design patterns support the development of coding practices by novices_?
@@ -132,6 +137,21 @@ It is thus potentially helpful to undertake a deeper analysis of:
 - game design patterns in learning design which exist at different scopes of activity [@mcandrew_patterns_2006].(CHECK THIS)
 - how design patterns interplay with design principles and how the process relates to design based research  [@linn_science_2006].
 - previous uses of GDPs - by repenning and others to then relate them to this framing.
+
+
+NOTE - MOVED FROM THE LAST CHAPTER HERE
+
+While game making can be seen superficially as the primary activity, I argue that a narrower objective of implementing GDPs and the dependant actions became the most vital unit of activity for participants.
+
+From the perspective of participants, the goal of implementing individual game patterns rather than the overall goal of making of a game, took up the majority of their focus. This can be evidenced in the following observations;
+
+- the frequency of GDP language referring to patterns used by pairs in particular in the process of collaborating ### Transition to next chapter - MOVED FROM THE LAST CHAPTER HERE
+on their games
+- the utility of the smaller unit of analysis in aiding resource creation
+- the value of completing something concrete a sense of sustaining achievement.
+- the ability to reflect after implementing each sub project,
+- any other value for practitioners, parents and young participants - i.e. in navigation and goal setting.
+
 
 
 <!-- #### On GDPs as a concept to help analysis -->
@@ -707,9 +727,30 @@ This example shows  a practical division of labour based on the building of emer
 <!-- NOTE - DIVISION OF LABOUR IS IN THE PREVIOUS CHAPTER TOO - REWRITE BASED ON GDP ONLY CONThTENT -->
 
 
+#### The development of divisions of labour - MOVED FROM NEXT CHAPTER
 
-<!-- COMMENTARY /WITH A FOCUS ON AGENCY -->
+<!-- The parent cedes the keyboard and mouse and sometimes swaps chairs to allow child to play test the game created.  -->
 
+Analysis of video data uncovered flexible way in which the participant divided the process of game making. While these processes were emergent in that they were not in by the facilitator, they show traces of home collaboration practices. For example, Suzanna and Olivia alternated between use of keyboard and mouse to give the child hands on experience when possible. In interview data the parent note "I resist the urge to fix things immediately when she struggles." The parent driving seat to overcome code blockages then allowed the child to input their design choices when more complicated work is complete.
+
+
+<!-- At one point the testing process Suzanna shows frustration as gravity value is very low making any movement very slow with little control. While the child has previously rejected increasing the value, the parent's initial acceptance of this decision is later questioned. The parent who has to do the majority of the testing is more insistent to remove a frustrating part of the testing  process.   -->
+
+<!-- Discussion drawing on more radical attempts to describe the best way to bring young learners into a design practice.
+Perhaps in the field of participatory design. -->
+
+
+Toby and Dan's pair process of accessing professional documentation also illustrated an aspect of their family learning culture. The pair's process is more guided and focused than many other participants. In several interchanges the father starts as a facilitator taking a lead from the direction of the child. As the child reaches the limits of their ability he begins to be more directive, by asking leading questions and testing existing knowledge. Finally, in order to complete the programming or research tasks beyond of the child's knowledge, the father is more direct in instruction, directing the research and proposing a coding solution for their new game design pattern.
+
+This approach appears to be influenced by Dan's experience as a software engineer and volunteer at Coder Dojo (Glossary). Interview extracts (included as appendices) show a direction to support the novices direction as a facilitator where possible.
+
+    I try never to touch the keyboard of who's there. If they are stuck on something I always tell them what to do. Even if it's then taken me five minutes to explain what a semicolon is. And point. It's that key. Because it was just, I could do it so effortlessly. I think I'm sure I put people off very quickly by "Dave did something really quickly. I don't know what it was.".
+
+This extract from interview data indicates a priority to support the learner to develop independently but to still be very present in the support process.
+
+**Leveraging the possibilities of emerging divisions of labour:**  While the context of the participants as families involved in home education makes any general claims difficult, these observations support  exist in other research in this domain. For example, research shows that children have the potential to help parents as technology brokers [@correa_brokering_2015]. In joint technology work parents can fulfil several,reciprocal roles including, collaborator, resource provider, learner, non-technical consultant and emotional support [@barron_parents_2009].
+
+Thus, in response to the creative support that parents and siblings provide, facilitators should design learning environments to facilitate these possibilities. The work of Roque provides guidance for helpers in the process to support parents to value and feel confident these roles [@roque_im_2016] in a way which mirrors the use of helpers this phase of my study.
 
 
 <!-- NOTE - LINK TO PREVIOUS CHAPTER ON FLEXIBILITY OF DESIGN -->
@@ -1127,7 +1168,7 @@ Player jump (y) velocity was set very high but left right (x) velocity was slow.
 
 NOTE CAN THIS FOCUS ON NON TEMPLATED GDPs?
 
-For example, the work of the child to add 21 levels to their own game served as a way to publicise this possibility. The process was also spread by that child's willingness to help others to add that feature to their game. This shifted dependence on myself as a facilitator, or on the instruction-based support documents. This excerpt shows this more experience child coder Te, agreeing to show another child Bertie  how to add new levels.
+For example, the work of the child to add 21 levels to their own game served as a way to publicise this possibility. The process was also spread by that child's willingness to help others to add that feature to their game. This shifted dependence on myself as a facilitator, or on the instruction-based support documents. This excerpt shows this more experience child coder Toby, agreeing to show another child Bertie  how to add new levels.
 
     Bertie: Why’s that enemy in every level
     Toby: He’s not.
