UPDATING RESEARCH QUESTIONS

--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -90,12 +90,12 @@ title: 4. Exploration of the Formative Learning Design Process
         chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter)
     -   [Link to next chapter](#link-to-next-chapter)
 
-## Research Questions - June 2023
+## Research Questions - Feb 2023
 
-1. What pedagogical tools and processes are available to support novices to overcome barriers to game coding and design?
-<!-- - What pedagogical factors are significant to support novices learning coding, particularly in game making contexts? -->
+1. What pedagogical tools and processes are available to support novices to overcome barriers to participation in game coding processes?
 2. How can learners build agency in an evolving community of game makers?
 3. How can game design patterns support the development of coding practices with novices?
+
 
 
 <!-- ## Notes on structure -->
