--- a/_posts/thesis_chapters/2023-12-6-Methods.md
+++ b/_posts/thesis_chapters/2023-12-6-Methods.md
@@ -9,7 +9,6 @@ layout: post
 categories: chapter
 title: 6. Seeding and Nurturing Game Making Communities to Facilitate Learner Agency
 ---
-
 -   [Research Questions - June 2023](#research-questions---june-2023)
 -   [Introduction](#introduction)
     -   [Notes on structure of the
@@ -25,6 +24,11 @@ title: 6. Seeding and Nurturing Game Making Communities to Facilitate Learner Ag
         -   [Restricted vs extended community - e.g. why not scratch
             with online community? - MOVE TO DISCUSSION ON
             PLAYTESTING?](#restricted-vs-extended-community---e.g.-why-not-scratch-with-online-community---move-to-discussion-on-playtesting)
+    -   [Note this has been moved from Design chapter so needs a place
+        to
+        sit.](#note-this-has-been-moved-from-design-chapter-so-needs-a-place-to-sit.)
+    -   [Using Physical Maps of Missions as Game Design
+        Patterns](#using-physical-maps-of-missions-as-game-design-patterns)
     -   [Barriers of identity hardcore coding & dysfunctional group
         work - REALLY COMPRESS UNLESS DATA BECOMES PRESENT - USE AS
         BASIS FOR
@@ -56,8 +60,6 @@ title: 6. Seeding and Nurturing Game Making Communities to Facilitate Learner Ag
         funds of
         knowledge](#emerging-use-of-narratives-and-graphics-which-drawing-on-home-funds-of-knowledge)
         -   [Summary: Home Funds and RQs](#summary-home-funds-and-rqs)
-    -   [The development of divisions of
-        labour](#the-development-of-divisions-of-labour)
     -   [Flexible design practices](#flexible-design-practices)
         -   [Supporting Digital/Game
             Jamming](#supporting-digitalgame-jamming)
@@ -77,7 +79,6 @@ title: 6. Seeding and Nurturing Game Making Communities to Facilitate Learner Ag
         -   [Implications in conceptualisations of forms of
             agency](#implications-in-conceptualisations-of-forms-of-agency)
 -   [Conclusion](#conclusion)
-    -   [Transition to next chapter](#transition-to-next-chapter)
 
 <!-- ## Overview in points
 
@@ -88,12 +89,11 @@ List what is needed / referenced in broad terms to help with planning - e.g.
 - Inclusion as Participation [@black-hawkins_achievement_2008; @black-hawkins_classroom_2012] -
 - Etc -->
 
-## Research Questions - June 2023
+## Research Questions - Feb 2023
 
-- What pedagogical tools and processes are available to support novices to overcome barriers to game coding and design?
-<!-- - What pedagogical factors are significant to support novices learning coding, particularly in game making contexts? -->
-- How can learners build agency in an evolving community of game makers?
-- How can game design patterns support the development of coding practices with novices?
+1. What pedagogical tools and processes are available to support novices to overcome barriers to participation in game coding processes?
+2. How can learners build agency in an evolving community of game makers?
+3. How can game design patterns support the development of coding practices with novices?
 
 ## Introduction
 
