--- a/_posts/thesis_chapters/2024-1-5-Gdps2.md
+++ b/_posts/thesis_chapters/2024-1-5-Gdps2.md
@@ -9,7 +9,6 @@ layout: post
 categories: chapter
 title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself, really"
 ---
-
 -   [Research Questions - June 2023](#research-questions---june-2023)
 -   [Notes to restructure](#notes-to-restructure)
     -   [Chapter outline](#chapter-outline)
@@ -37,6 +36,8 @@ title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself,
             process](#gdps-as-used-by-participants-in-their-prioritisation-in-the-ideation-process)
     -   [GDPs aiding the process of division of
         labour](#gdps-aiding-the-process-of-division-of-labour)
+        -   [The development of divisions of labour - MOVED FROM NEXT
+            CHAPTER](#the-development-of-divisions-of-labour---moved-from-next-chapter)
     -   [The role of GDP used in emerging tool use, technical processes
         and specialist
         language](#the-role-of-gdp-used-in-emerging-tool-use-technical-processes-and-specialist-language)
@@ -78,10 +79,10 @@ title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself,
         catalogues - MERGE WITH THE SECTION
         ABOVE](#discussion-on-the-use-of-design-patterns-and-pattern-catalogues---merge-with-the-section-above)
 
-## Research Questions - June  2023
 
-1. What pedagogical tools and processes are available to support novices to overcome barriers to game coding and design?
-<!-- - What pedagogical factors are significant to support novices learning coding, particularly in game making contexts? -->
+## Research Questions - Feb 2023
+
+1. What pedagogical tools and processes are available to support novices to overcome barriers to participation in game coding processes?
 2. How can learners build agency in an evolving community of game makers?
 3. How can game design patterns support the development of coding practices with novices?
 
@@ -100,9 +101,6 @@ Also work out what to move to Lit Review - and restructure LT and Methodology ba
 
 There is a table of simple results here.
 https://docs.google.com/document/d/12EmPhm8E_TE4rimvRdRf2wC5XRwT3EXO4cRZ99RNkTQ/edit
-
-
-
 
 
 
