--- a/_posts/thesis_chapters/tocs/2024-1-5-Gdps2.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-1-5-Gdps2.md_toc.md
@@ -25,23 +25,31 @@
             process](#gdps-as-used-by-participants-in-their-prioritisation-in-the-ideation-process)
     -   [GDPs aiding the process of division of
         labour](#gdps-aiding-the-process-of-division-of-labour)
+        -   [The development of divisions of labour - MOVED FROM NEXT
+            CHAPTER](#the-development-of-divisions-of-labour---moved-from-next-chapter)
     -   [The role of GDP used in emerging tool use, technical processes
         and specialist
         language](#the-role-of-gdp-used-in-emerging-tool-use-technical-processes-and-specialist-language)
         -   [Other examples of GDP driving adoption of technical
             processes](#other-examples-of-gdp-driving-adoption-of-technical-processes)
-    -   [Use of GDPs to support debugging and the product revision
-        process](#use-of-gdps-to-support-debugging-and-the-product-revision-process)
+    -   [GDPs in relation to project revision and
+        debugging](#gdps-in-relation-to-project-revision-and-debugging)
         -   [Code Patching as a guided
             process](#code-patching-as-a-guided-process)
-        -   [GDPs used to nurture tactical responses to errors and
-            blockages](#gdps-used-to-nurture-tactical-responses-to-errors-and-blockages)
+        -   [GDPs used to nurture tactical responses to coding
+            errors](#gdps-used-to-nurture-tactical-responses-to-coding-errors)
+        -   [Concluding remarks on debugging and
+            revision](#concluding-remarks-on-debugging-and-revision)
 -   [Cultural Dimension](#cultural-dimension)
-    -   [GDPs can encourage learners to design for others - ALSO LINKED
-        TO IDEATION? - is this guided
-        participation?](#gdps-can-encourage-learners-to-design-for-others---also-linked-to-ideation---is-this-guided-participation)
-    -   [The propagation of use of GDPs through
-        playtesting](#the-propagation-of-use-of-gdps-through-playtesting)
+    -   [The role of GDPs to facilitate learners to design for
+        others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
+    -   [Role of playtesting and feedback and
+        GDPs](#role-of-playtesting-and-feedback-and-gdps)
+        -   [GDP concepts and language used in informal feedback for
+            peers to influence modification of
+            games](#gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games)
+        -   [The propagation of use of GDPs through
+            playtesting](#the-propagation-of-use-of-gdps-through-playtesting)
     -   [GDPs facilitate the use of wider funds of
         knowledge](#gdps-facilitate-the-use-of-wider-funds-of-knowledge)
         -   [Problem solving practices as a fund of knowledge (but not
