moving notes around

--- a/_posts/thesis_chapters/2024-1-5-Gdps2.md
+++ b/_posts/thesis_chapters/2024-1-5-Gdps2.md
@@ -104,6 +104,9 @@ https://docs.google.com/document/d/12EmPhm8E_TE4rimvRdRf2wC5XRwT3EXO4cRZ99RNkTQ/
 
 
 
+
+
+
 ### Chapter outline
 
 In the last chapter I outlined use of tools often focusing on and emerging tensions in activity on a micro level. This chapter analyses this emergent activity at a mid-level scope between concrete tool use and the wider cultural context of the game making community. I focus on the implementation of individual game design patterns (GDPs) and in doing so addresses how data gathered informs thinking on the research question - _how can game design patterns support the development of coding practices by novices_?
@@ -913,6 +916,23 @@ Question - what impact does the process of being driven by GDPs have on how user
 
 For example does the closely paired code structure and game output help with motivation?
 
+
+
+<!-- ### On different kinds of snags / blockages
+
+PERHAPS MOVE BACK TO THE GDP CHAPTER IF SPACE?
+
+#### On Debugging and Embracing Different Types of Errors -
+
+In analysis of journal notes and recorded screens I began to identify different kinds of problems that blocked participants from progressing. I refer to different kinds of blockages which result from tensions and contradictions between different elements in activity systems.
+
+Some blockages were non-technical including hunger or grumpyness between participants, others were due to lack of access to the right tools or understanding of processes, others were particular types of coding error. I propose that more granular understanding of different kinds of design blocks can help facilitators and ultimately learners in building agency in their response to them.
+ -->
+
+In analysis of journal notes and recorded screens I began to identify different kinds of problems that blocked participants from progressing. I refer to different kinds of blockages which result from tensions and contradictions between different elements in activity systems.
+
+Some blockages were non-technical including hunger or grumpyness between participants, others were due to lack of access to the right tools or understanding of processes, others were particular types of coding error. I propose that more granular understanding of different kinds of design blocks can help facilitators and ultimately learners in building agency in their response to them.
+
 For example,  on into the detail and types or errors.  These include:
 
   -   **Syntax and Program Errors** are errors in your code which stop the game from functioning at all, often resulting in a blank screen.
@@ -926,6 +946,21 @@ In a similar way that the initial provisions of a broken games are valuable to e
 
 This area show potential but is under explored. However, just surfacing the issue feels valid in terms of useful stream of facilitator practice to explore.
 
+
+<!-- #### Examples of Glitch types of errors
+
+Short examples of different types and the affect implications.
+
+Glitch errors can be productive.
+
+**Productive in exploring code / creating new game opportunites**
+An interesting one where the x / y axis mix up for Te 2019-03-18 leads to a new challenge in the game.
+
+**Productive in in**
+
+- Glitch - 2019-05-08 - Te and Da  - create moving enemy but it totally leaves the screen. This caused amusement and participants knew how they thought they would follow that up.
+
+ The game making style of some participants -- for the most part young people -- seemed particularly likely to induce glitches and their unintended effects in game play. As a facilitator I began to celebrate these glitches with participants and explore with them the opportunities they provided to understand the related code in a way that was often concrete, engaging and and playful. -->
 
 #### Concluding remarks on debugging and revision
 
@@ -941,17 +976,7 @@ CAN i FIND ANY KEY EXAMPLES OF THIS?
 
 
 
- <!-- ### On different kinds of snags / blockages
 
- PERHAPS MOVE BACK TO THE GDP CHAPTER IF SPACE?
-
- #### On Debugging and Embracing Different Types of Errors -
-
- In analysis of journal notes and recorded screens I began to identify different kinds of problems that blocked participants from progressing. I refer to different kinds of blockages which result from tensions and contradictions between different elements in activity systems.
-
- Some blockages were non-technical including hunger or grumpyness between participants, others were due to lack of access to the right tools or understanding of processes, others were particular types of coding error. I propose that more granular understanding of different kinds of design blocks can help facilitators and ultimately learners in building agency in their response to them.
-
-  -->
 
  <!-- #### Examples of Glitch types of errors
 
