--- a/_posts/thesis_chapters/2023-12-6-Methods.md
+++ b/_posts/thesis_chapters/2023-12-6-Methods.md
@@ -809,8 +809,15 @@ In the data analysed, young people -->
 <!-- opens up flexibility in the way learners approach the design processes. -->
 <!-- imagined, often in response to community need, by myself, the following emerged from community use. -->
 
-## Emerging practices
+## Emerging cultural practices
 
+NOTE THIS NEEDS A QUICK INTRODUCTION TO MAKE A TRANSITION - LINK THIS PART AND RECONNECT IT WITH CHAPTER 4.
+
+AT theory emphasises that the process of activity does not start in a vacuum. This helps justify the formative intervention process which is active in intervention and in the initial shaping of activity. In an educational context, this can involve introduction of tasks as starting activities to shape. This is justified conceptually from a view of not restricting participant agency in that some form of activity should be suggested in order for them to make a rational choice as to weather to participate. It follows that this activity should encourage the communication that participant choice is significant in the design.
+
+Beyond the starting point, the focus shifts to the way participants appropriate and use these practices. Many outlined here were very minimal in embryonic form but extended significantly by participants.
+
+However the focus should not solely rest on the emerging practices but on the measures that facilitators can encourage them. The following sections address these dimensions using a lens of inclusive pedagogy and authorial agency.
 
 ### Playtesting
 
@@ -820,11 +827,13 @@ As explored in the literature review and previous chapter, playtesting is a rich
 
  <!-- By the time video data recording started in phase three there were already complex patterns of playtesting underway. In this section, I review data to describe some of the emerging playtesting behaviours of participants. -->
 
-**Playtesting as a social process**
+#### Playtesting as a cultural process
 
-Participants, particularly older ones, used playtesting as a way of showing support for fellow game makers. Example behaviours included: praising graphical content; making links with home interests of participants through questioning; and building rapport. Molly in particular used playtesting to show her appreciation of the graphical work of others especially in the creation of cute animal characters. In response to one game which featured an image of a dog, other participants asked: _Do you like dogs? Do you have a dog at home?_.
+Participants, particularly older ones, used playtesting as a way of showing support for fellow game makers. Example behaviours included: praising graphical content; making links with home interests of participants through questioning; and building rapport.
 
-**Playtesting and embodied participation in the games of others**
+Molly in particular used playtesting to show her appreciation of the graphical work of others especially in the creation of cute animal characters. In response to one game which featured an image of a dog, other participants asked: _Do you like dogs? Do you have a dog at home?_.
+
+#### Playtesting and embodied participation in the games of others
 
 <!-- By the time phase three and video capture of data was underway, the process of playtesting began to take on interesting characteristics for some younger participants who were working more independently. -->
 <!-- Because these interactions were mobile between works is it hard to transcribe interactions. However, description of the physical movement and gestures of the young people is relevant to explore the value of this behaviour which I will call playful playtesting.  -->
@@ -843,37 +852,41 @@ These changes to the form and function of playtesting by young participants is a
 <!-- NOTE - Nadine's play on secret missions mirrors some of her more spontaneous play in the previous phase - thus one informs other -->
 
 
-**Community concepts and norming behaviour emerging during playtesting**
+#### Community concepts and norming behaviour emerging during playtesting
 
 <!-- THERE IS DOUBLICATION WITH NEXT CHAPTER - REEVALUATE / REFACTOR - ESP CONCEPT OF SAFE ZONE -->
 
 
-The elements of variables controlling player movement, the ability to place hazards in the layout of the platform game were initial changes that all participants made but the end results greatly varied in terms of the challenge of the games. Discussions on game challenge, specifically comments about how 'hard' participant games were the most common forms of interaction during playtesting.
+<!-- The elements of variables controlling player movement, the ability to place hazards in the layout of the platform game were initial changes that all participants made but the end results greatly varied in terms of the challenge of the games. Discussions on game challenge, specifically comments about how 'hard' participant games were the most common forms of interaction during playtesting.
 
-Through this informal feedback participants sought to influence peers to modify the playability and challenge games to increase the enjoyment of peer players. For example, parent Molly had been focused mostly on completing asset design this had created a very frustrating game experience in terms of the player's movement. Just before this extract, as a facilitator, I shared feedback about using quite indirect technical language when giving feedback (See appendix 4.x).
+Through this informal feedback participants sought to influence peers to modify the playability and challenge games to increase the enjoyment of peer players. For example, parent Molly had been focused mostly on completing asset design this had created a very frustrating game experience in terms of the player's movement. Just before this extract, as a facilitator, I shared feedback about using quite indirect technical language when giving feedback (See appendix 4.x). -->
 
 <!-- PERHAPS TURN THIS INTO A TABLE WITH GESTURE?  -->
 
-    Bertie: That looks nice (referring to the graphical look of the game)
+<!-- Bertie: That looks nice (referring to the graphical look of the game)
 
-    Molly invites Bertie: to play as she can't progress due to the difficult game controls.
+Molly invites Bertie: to play as she can't progress due to the difficult game controls.
 
-    Bertie: It jumps super high but so slow.  
-    Pause
-    Molly: He has to go slow because he's an astronaut, you see.    
-    Bertie: It's hard.
-    (Bertie leaves.)
-    Molly: (to peer parent with proud tone.) It's hard. Wow.
+Bertie: It jumps super high but so slow.  
+Pause
+Molly: He has to go slow because he's an astronaut, you see.    
+Bertie: It's hard.
+(Bertie leaves.)
+Molly: (to peer parent with proud tone.) It's hard. Wow.
 
-    (Ed comes to play the game)
-    Ed: How much jump speed to you have?
-    Ed: Your jump speed is massive.
+(Ed comes to play the game)
+Ed: How much jump speed to you have?
+Ed: Your jump speed is massive.
 
-Molly initially misconstrues feedback from Bertie that her game is hard as a positive thing. A variety of comments nudge Molly to change her game to align with an emerging community norm of what a sensible jump behaviour should be. Feedback from Mick attempts to bridge a technical and conversational approach. Feedback from Bertie is direct about his player experience as a player. Ed gives a more technical explanation from  involving the naming of the variable _jump speed_.
+Molly initially misconstrues feedback from Bertie that her game is hard as a positive thing. A variety of comments nudge Molly to change her game to align with an emerging community norm of what a sensible jump behaviour should be. Feedback from Mick attempts to bridge a technical and conversational approach. Feedback from Bertie is direct about his player experience as a player.  -->
+
+NOTE THERE IS SOMETHING HERE ABOUT ME STEPPING BACK AND LETTING THE COMMUNITY EVOLVE.
+
+Ed gives a more technical explanation from  involving the naming of the variable _jump speed_.
 
 Other children come and play the game but only for less than a minute before leaving. Towards the end of the playtesting process, as one child leaves, Molly comments "It's so frustrating." This suggests an evolving understanding that her game is frustrating to players rather than pleasantly challenging.
 
-The less directive norming behaviours here mirror observations seen in the work of Rogoff and colleagues[@rogoff_cultural_2003] on learning in  community settings. There is an apparent tension in play here between encouraging individual agency of expression within the game and an evolving community tendency to norm peoples games to be more _playable_, specifically that player movement should conforming to wider expectations.
+The indirect norming behaviours ... described in previous chapter ...  mirror observations seen in the work of Rogoff and colleagues[@rogoff_cultural_2003] on learning in  community settings. There is an apparent tension in play here between encouraging individual agency of expression within the game and an evolving community tendency to norm peoples games to be more _playable_, specifically that player movement should conforming to wider expectations.
 
 To better understand this process it is relevant to locate the source of these wider expectations and to evaluate their utility here. This is attempted in the discussion section of the chapter.
 
