--- a/_posts/thesis_chapters/tocs/2023-12-6-Methods.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2023-12-6-Methods.md_toc.md
@@ -1,4 +1,4 @@
--   [Research Questions - June 2023](#research-questions---june-2023)
+-   [Research Questions - Feb 2023](#research-questions---feb-2023)
 -   [Introduction](#introduction)
     -   [Notes on structure of the
         chapter](#notes-on-structure-of-the-chapter)
@@ -43,8 +43,14 @@
         practices](#use-of-side-missions-to-encourage-varied-creative-practices)
     -   [Concluding remarks on process
         drama](#concluding-remarks-on-process-drama)
--   [Emerging practices](#emerging-practices)
+-   [Emerging cultural practices](#emerging-cultural-practices)
     -   [Playtesting](#playtesting)
+        -   [Playtesting as a social
+            process](#playtesting-as-a-social-process)
+        -   [Playtesting and embodied participation in the games of
+            others](#playtesting-and-embodied-participation-in-the-games-of-others)
+        -   [Community concepts and norming behaviour emerging during
+            playtesting](#community-concepts-and-norming-behaviour-emerging-during-playtesting)
     -   [Emerging use of narratives and graphics which drawing on home
         funds of
         knowledge](#emerging-use-of-narratives-and-graphics-which-drawing-on-home-funds-of-knowledge)
