--- a/_posts/thesis_chapters/2024-1-5-Gdps2.md
+++ b/_posts/thesis_chapters/2024-1-5-Gdps2.md
@@ -99,11 +99,8 @@ Examine overlap of the cultural uses of GDP, and the next chapter - hand in hand
 In discussion - refocus discussion on using mid level design construct first - then GDP and pattern collection as an example.
 Also work out what to move to Lit Review - and restructure LT and Methodology based on two chapters near completion.
 
-There is a table of simple results here.
+There is a table of simple results here - listing the sections below with examples - perhaps put in end section
 https://docs.google.com/document/d/12EmPhm8E_TE4rimvRdRf2wC5XRwT3EXO4cRZ99RNkTQ/edit
-
-
-
 
 
 
@@ -126,33 +123,49 @@ https://docs.google.com/document/d/19PafC_w_7uObYL4v86IGeeFZTw2yKxjHfP_k85rHk_s/
 
 In the introduction, I outlined some of the broader challenges of sharing practice and research to practically support the learning of coding practices beyond the immediate context of the research in question. The choice of what scope of activity to examine in detail is relevant to this challenge. While this concept of germ cell / unit of analysis a is more typically used in a larger scope of societal activity, the principles apply this smaller scope. For a study of this nature, too broad an analysis risks insufficient detail to allow replication, too narrow risks being overly context dependant and limiting the potential for wider application.
 
-This chapter centres on the exploration of the implementation of game design patterns (GDPs) as a key objective of in a way which correlates with the mid-level activity described in the last chapter. The same concept can be expressed using AT terminology as the use of GDPs as a unit of analysis or germ-cell of activity, two similar concepts with slightly different foci.
+This chapter centres on an interpretation of the implementation of game design patterns (GDPs) as a unit of analysis or germ-cell of activity. These are two similar concepts with slightly different foci.
 
 <!-- Mid-level construct of design / patterns heuristics [] -->
 
     ... the germ-cell and the unit of analysis are one and the same thing, but in one case the developmental aspect is emphasised and in the other case the analytical aspect is emphasised. [@blunden_unit_2020]
 
-As a designer / researcher and practitioner both aspects are relevant and are explored separately in the following two sections.
+In this thesis, as a designer / researcher and practitioner both aspects are relevant.
 
-It is thus potentially helpful to undertake a deeper analysis of:
-- game design patterns in learning design which exist at different scopes of activity [@mcandrew_patterns_2006].(CHECK THIS)
-- how design patterns interplay with design principles and how the process relates to design based research  [@linn_science_2006].
-- previous uses of GDPs - by repenning and others to then relate them to this framing.
+A granular exploration of the tensions and processes at work in a complex educational environment can via identifying emerging barriers and responses to comprehension, communication and practical barriers to implementing design challenges facilitates replicability of research and supports its potential value to other practitioners [@barab_using_2002].
 
+<!-- However, despite the value of a micro approach which includes close analysis of implementation of code structures. -->
 
-NOTE - MOVED FROM THE LAST CHAPTER HERE
+The process of seeking and defining a key activity scope/unit for analysis helps define useful boundaries of what to analyse in depth. This chapter has a narrow focus on the implementation of gameplay design patterns (GDPs) allowing for the identification and analysis of patterns of participant behaviour and introduced and emerging community practices to do with GDPs.
+<!-- At this scope, for participants implementing . -->
 
 While game making can be seen superficially as the primary activity, I argue that a narrower objective of implementing GDPs and the dependant actions became the most vital unit of activity for participants.
 
-From the perspective of participants, the goal of implementing individual game patterns rather than the overall goal of making of a game, took up the majority of their focus. This can be evidenced in the following observations;
+Each GDP can be seen as a project of the overarching objective to create a game. Here the term project here communicates a concrete implementation of a planned goal and also a sense that all elements of key activity are present at this level e.g. all stages of the design cycle (and another example?).  This sentiment is echoed by a parent when noticing that the documentation on one GDPs involved several distinct stages - "It’s like a project in itself really!"
 
-- the frequency of GDP language referring to patterns used by pairs in particular in the process of collaborating ### Transition to next chapter - MOVED FROM THE LAST CHAPTER HERE
-on their games
-- the utility of the smaller unit of analysis in aiding resource creation
+This focus is supported in the following observations;
+
+
+- the frequency of GDP language referring to patterns used by pairs in particular in the process of collaborating on their games
+- Through observation of GDPs as a germ-cell being used at different phases / scope of the learning design as it evolved.
+- a set of code examples, instruction tutorials, quick start activities which proposed micro level code modification. While these approaches are  distinct in their pedagogical use, they stemmed from the same germ-cell activity of altering the game through transforming GDPs
+
+<!-- The previous chapter explores how I developed these requests into a set of code examples, instruction tutorials, quick start activities which proposed micro level code modification. While these approaches are  distinct in their pedagogical use, they stemmed from the same germ-cell activity of altering the game through transforming GDPs. -->
+
+
+In addition the following merit attention in this chapter:
+
+NOTE CHECK THESE WITH THE DISCUSSION CONCLUSION.
+
 - the value of completing something concrete a sense of sustaining achievement.
-- the ability to reflect after implementing each sub project,
+- the utility of the smaller unit of analysis in aiding resource creation / facilitation for facilitators
 - any other value for practitioners, parents and young participants - i.e. in navigation and goal setting.
+- the ability to reflect after implementing each sub project,
 
+And to deeping our understanding, it is thus potentially helpful to undertake a deeper analysis of:
+
+  - game design patterns in learning design which exist at different scopes of activity [@mcandrew_patterns_2006].(CHECK THIS)
+  - how design patterns interplay with design principles and how the process relates to design based research  [@linn_science_2006].
+  - previous uses of GDPs - by repenning and others to then relate them to this framing.
 
 
 <!-- #### On GDPs as a concept to help analysis -->
@@ -166,14 +179,9 @@ tie in conceptts of
 - repeated activity / iteration
 - rising to the concrete - ie different forms of activity.  -->
 
-A granular exploration of the tensions and processes at work in a complex educational environment can via identifying emerging barriers and responses to comprehension, communication and practical barriers to implementing design challenges facilitates replicability of research and supports its potential value to other practitioners [@barab_using_2002].
 
-<!-- However, despite the value of a micro approach which includes close analysis of implementation of code structures. -->
 
-The process of seeking and defining a key activity scope/unit for analysis helps define useful boundaries of what to analyse in depth. This chapter has a narrow focus on the implementation of gameplay design patterns (GDPs) allowing for the identification and analysis of patterns of participant behaviour and introduced and emerging community practices to do with GDPs.
-At this scope, for participants implementing each GDP can be seen as a project of the overarching objective to create a game. Here the term project here communicates a concrete implementation of a planned goal and also a sense that all elements of key activity are present at this level e.g. all stages of the design cycle (and another example?).  This sentiment is echoed by a parent when noticing that the documentation on one GDPs involved several distinct stages - "It’s like a project in itself really!".
 
-GDPs emerged as a unit of analysis through their initial observation of GDPs as a germ-cell being used at different phases / scope of the learning design as it evolved. The previous chapter explores how I developed these requests into a set of code examples, instruction tutorials, quick start activities which proposed micro level code modification. While these approaches are  distinct in their pedagogical use, they stemmed from the same germ-cell activity of altering the game through transforming GDPs.
 
 
 MOVED EARLIER HERE - Check it fits? In the literature review and methodology chapter we examined different interpretations of agency used by researchers using activity theory [@hopwood_agency_2022]. In interpreting the results of this chapter it is of value to explore Sannino's concept of transformative agency by double stimulation (TADS). This concept of agency is of particular value for this study as it acknowledges both the transformative role of the learner to the learning environment in a way which reflects the mutual development of this design. Thus the role of GDPS both as a tool introduced by myself as the facilitator, and their adopted use by participants will be examined here.
@@ -321,11 +329,20 @@ https://docs.google.com/document/d/19PafC_w_7uObYL4v86IGeeFZTw2yKxjHfP_k85rHk_s/
 
 ### Descriptive Commentary on Vignette A
 
-The key and door pattern is one of the harder ones to implement as it involves adding two new functions, which while simple enough, represent new code structures and thus this adds a new level of conceptual and practical complexity. This is borne out in the coding blockage the family found themselves in the first part of the session. The supporting resources for this pattern are included in Appendix 6.x. The parent finally circumnavigates the conflict of her own hesitancy regarding asking for facilitator help by sending out her child to ask. REWRITE IN SANNINO TERMS.
+THIS COULD DO WITH REVISITING WITH A FOCUS - PERHAPS SPECIALIST LANGUAGE LIKE DOUBLE BIND / AGENCY - AND REMOVING PREFIGURING OF TOO MUCH DIVISION OF LABOUR AND DESIGNING FOR OTHERS
 
-The parent has taken on the role of solving harder code problems following  instructions carefully. The child is one of the younger participants when blockages occur she explores the room or to dwell on the periphery of other participants interactions. As well as the key and door pattern which has just been implemented, the child also wants to add additional levels to the game. In this and the previous sessions several young participants had added levels to their games and this GDP sparked discourse between participants. It is likely that this Th's interest stems at least in part from observations of other participants games and this discourse.
+The activity of this pair in this vignette is driven by their following a tutorial chapter in the text book. This chapter is included as appendix 5.x.
+
+MAKE SURE THERE IS A SCREENSHOT OF THE TEXT BOOK - PERHAPS NAVIGATING THE DROP DOWN MENU OF PATTERNS.
+
+The key and door pattern is one of the harder ones to implement as it involves adding two new functions, which while simple enough, represent new code structures and thus this adds a new level of conceptual and practical complexity. This is reflected in the situation of feeling stuck that family found themselves in the first part of the session. The parent has taken on the role of solving harder code problems following  instructions carefully. The child is one of the younger participants when blockages occur she explores the room or to dwell on the periphery of other participants interactions. The parent then circumnavigates the conflict of her own hesitancy regarding asking for facilitator help by sending out her child to ask.
+
+<!-- DIVISION ON LABOUR HERE - POSSIBLE DUPLICATE? -->
+
+REWRITE IN SANNINO TERMS.
 
 
+As well as the key and door pattern which has just been implemented, the child also wants to add additional levels to the game. In this and the previous sessions several young participants had added levels to their games and this GDP sparked discourse between participants. It is likely that this Suzanna's interest stems at least in part from observations of other participants games and this discourse.
 
 <!--
 The supporting resources are available here.
@@ -336,17 +353,21 @@ The implementation of a new GDP involve adding new code to the game. The amount 
 
 However the parent navigates this.
 
-After a blockage caused by debugging coding is removed, the parent immediately re-engages the child. The parent says "Did you see Th?" and then prompts the child to play-test the game. The child is keen to both replicate the GDP of keys and doors in the second level and to add a new GDP of adding additional levels to the game.
+After a blockage caused by debugging coding is removed, the parent immediately re-engages the child. The parent says "Did you see Suzanne?" and then prompts the child to play-test the game. The child is keen to both replicate the GDP of keys and doors in the second level and to add a new GDP of adding additional levels to the game.
+nOTE add? THIS CHAPTER EXPLORES DOL Later...
 
+<!--
+MOVE TO DOL IF NEEDED
 
-For this child developed a cyclical pattern of alternation between higher and lower engagement with the coding processes based on lower engagement the period of time when her parent was problem solving code and higher engagement once it was implemention of the structural element was almost complete. Completion of the code implementation of a GDP allows for new possibilities in design dynamics using the same text matrix level design tool. This stage of working on a new GDP sustains the child's activity. The child shows high engagement at this stage outlining her plan for implementing the pattern in the process of designing their game. sPECIFICALLY SAYING X, Y Z.
+For this child developed a cyclical pattern of alternation between higher and lower engagement with the coding processes based on lower engagement the period of time when her parent was problem solving code and higher engagement once it was implemention of the structural element was almost complete. Completion of the code implementation of a GDP allows for new possibilities in design dynamics using the same text matrix level design tool. This stage of working on a new GDP sustains the child's activity. The child shows high engagement at this stage outlining her plan for implementing the pattern in the process of designing their game. sPECIFICALLY SAYING X, Y Z. -->
 
 
 In the programme Suzanna has built important proficiency in coding practice, which include; finding and comprehending supporting documentation, fluidly navigating between undertaking more advanced coding to implement new GDPs, playtesting and preparing the coding environment for more basic coding of her child. The parent navigates this process skilfully and is able to incorporate the child's interests. She takes signals clearly to her child when the process returns certain design stages indicating that she is aware of the greater possibility for effective child input at these moments.
 
-While this adult structured the process of implementing new GDPs through engaging with documentation in a careful and methodical way, other individuals and pairs approached the same objectives in diverse ways.
+While this pair structured the process of implementing new GDPs through careful use of documentation, alternate use of keyboard , adult facilitating and coding process responsive to the child's leat, other individuals and pairs approached the same objectives in diverse ways.
 
-This chapter now expands to represent the diversity of the coding and community practices of participants through focusing on their use of game design patterns. (and opportunities for educators)
+This chapter now expands to represent this diversity of the coding and community practices of participants, focusing on their use of game design patterns. 
+Later in the chapter this will be analysed for implications for researchers and d opportunities for educators.
 
 
 <!-- As the child progress from making changes to then testing them her engagement stays high. In this example, the process of playtesting also involves the child speaking and identification of modifications to and new GDPs to implement.
